# verificado

./: .gitignore  README.md  output.csv  pyproject.toml
src/relation_validator/: __main__.py  validator.py
src/relation_validator/conf/: obograph-style.json
src/relation_validator/utils/: utils.py
src/validation/: validator.py
src/verificado/: validator.py
src/verificado/conf/: obograph-style.json
src/verificado/utils/: utils.py
style/: graph-style.json
tests/: not_valid_placenta.csv  placenta.csv  ref-organ-relations.csv  test-generic.tsv  test-generic_parsed.tsv  test-ont-versions.json  test-parser.yaml  test-results.csv
