[tool.poetry]
name = "verificado"
version = "1.0"
description = "This package validates a list of relationships between two terms against the specified ontologies."
authors = ["Anita Caron <anitac@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "verificado", from="src"}]
repository = "https://github.com/INCATools/verificado"

[tool.poetry.dependencies]
python = "^3.8"
pyaml = "^21.10.1"
ruamel-yaml = "^0.17.21"
oaklib = "^0.5.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
verificado = 'verificado.__main__:main'
